--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
 - pod repo update
 
 script:
-- set -o pipefail && xcodebuild test -workspace SwiftFP.xcworkspace -scheme SwiftFP -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 7 Plus"
+- set -o pipefail && xcodebuild test -sdk iphonesimulator -workspace SwiftFP.xcworkspace  -scheme SwiftFP  CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 7 Plus'
+
 - pod lib lint --quick
 
 after_success: slather
