--- a/SwiftFP.xcodeproj/xcshareddata/xcschemes/SwiftFPTests.xcscheme
+++ b/SwiftFP.xcodeproj/xcshareddata/xcschemes/SwiftFPTests.xcscheme
@@ -74,6 +74,11 @@
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
