--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
-osx_image: xcode9.2
+osx_image: xcode10.2
 language: objective-c
 xcode_workspace: SwiftFP.xcworkspace
 xcode_scheme: SwiftFP
-xcode_sdk: iphonesimulator11.2
+xcode_sdk: iphonesimulator12.1
 before_install:
-- gem install cocoapods slather xcpretty
-- pod repo update
+  - gem install cocoapods
+  - gem install slather
+  - gem install xcpretty
+  - pod install
 
 script:
-- set -o pipefail && xcodebuild clean test -sdk iphonesimulator -workspace SwiftFP.xcworkspace -scheme SwiftFP -destination 'platform=iOS Simulator,name=iPhone 7' CODE_SIGNING_REQUIRED=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES | xcpretty
-- pod lib lint --quick
+  - set -o pipefail && xcodebuild clean test -sdk iphonesimulator -workspace SwiftFP.xcworkspace -scheme SwiftFP -destination 'platform=iOS Simulator,name=iPhone 8 Plus' | xcpretty
+  - pod lib lint --quick
 
 after_success: slather
